# voice-log

./: .gitignore  AGENTS.md  LICENSE.txt  README.md  config.sample.yaml  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  requirements.md
prompts/: minutes.md  summary_3lines.md  todo.md
src/voice_log/: __init__.py  audio_io.py  config.py  diagnostics.py  hallucination.py  logger.py  output.py  prompts.py  summarize.py  transcribe.py  ui.py
tests/: __init__.py  test_config.py  test_hallucination.py  test_output.py  test_prompts.py  test_summarize.py
