[project]
name = "voice-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "llvmlite>=0.46.0",
    "numba>=0.63.0",
    "openai>=2.14.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "stable-ts[fw]>=2.19.1",
    "torch>=2.9.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchcodec = { index = "pytorch-cu130" }
